<resources>
    <string name="app_name">Mímame</string>
    <string name="action_settings">Settings</string>
    <string name="login">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrar">Crear Cuenta</string>
    <string name="recordar_contrasena">Recordar Contraseña</string>
    <string name="indicar_login">Indica el login</string>
    <string name="separador_o">O</string>
    <string name="olvide_contrasena">¿Has olvidado la contraseña?</string>
    <string name="mensaje_recuperar_login">Introduzca el nombre del usuario</string>
    <string name="mensaje_recuperar_login_error">El usuario debe tener como minimo 5 caracteres</string>
    <string name="mensaje_advertencia_recordar_contrasena">Si acepta se generará una contraseña que le será enviada a su correo.</string>
    <string name="mensaje_advertencia_cambiar_contrasena">Se va a cambiar la contraseña. Se requerirá un nuevo inicio de sesión.</string>
    <string name="mensaje_advertencia_cambiar_email">Se va a cambiar el email. Se requerirá un nuevo inicio de sesión.</string>
    <string name="mensaje_advertencia_crear_cuenta">Se le enviará un correo notificando el registro.</string>
    <string name="error_conexion">Error de conexión.</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="mensaje_login_vacio">Debe introducir el nombre de usuario</string>
    <string name="mensaje_contrasena_vacia">Debe de introducir la contraseña</string>
    <string name="mensaje_email_vacio">Debe de introducir el email</string>
    <string name="mensaje_email_confirmar_vacio">Debe de confirmar el email</string>
    32
    <string name="mensaje_nombre_vacio">Debe de introducir su nombre</string>
    32
    <string name="mensaje_apellidos_vacio">Debe de introducir sus apellidos</string>
    <string name="mensaje_direccion_vacio">Debe de introducir una dirección</string>
    <string name="mensaje_cp_vacio">Debe de introducir un código postal</string>
    <string name="mensaje_tlfn_vacio">Debe de introducir un número de telefono</string>
    <string name="mensaje_contrasena_confirmar_vacia">Debe de confirmar la contraseña</string>
    <string name="email">Email</string>
    <string name="email_confirmar">Confirmar email</string>
    <string name="email_actual">Email actual</string>
    <string name="email_nuevo">Email nuevo</string>
    <string name="contrasena_confirmar">Confirmar contrasena</string>
    <string name="enviar">Enviar</string>
    <string name="mensaje_contrasenas_coincidir">Las contraseñas deben coincidir</string>
    <string name="mensaje_email_coincidir">Los emails deben coincidir</string>
    <string name="mensaje_email_no_formato">Debe introducir un email válido</string>
    <string name="animales">Animales</string>
    <string name="protectoras">Protectoras</string>
    <string name="ajustes">Ajustes</string>
    <string name="me_gusta">Me Gusta</string>
    <string name="configuracion">Configuración</string>
    <string name="mensaje">Mensajes</string>
    <string name="title_activity_animal_fragment">AnimalFragment</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="title_activity_protectora_fragment">ProtectoraFragment</string>
    <string name="cambiar_datos_usuario">Cambiar datos personales</string>
    <string name="cambiar_email">Cambiar email</string>
    <string name="cambiar_imagen">Cambiar imagen</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="contrasena_nueva">Contraseña nueva</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nombre">Nombre</string>
    <string name="appellidos">Apellidos</string>
    <string name="direccion">Dirección</string>
    <string name="cod_postal">Código Postal</string>
    <string name="telefono">Telefono</string>
    <string name="actualizar">Actualizar Datos</string>
    <string name="ocurrido_error">Ha ocurrido un error, inténtelo de nuevo o más tarde</string>
    <string name="datos_animal">Datos del animal</string>
    <string name="contactar">Contactar</string>
    <string name="informacion_animal">Información</string>
    <string name="sexo_animal">Sexo:</string>
    <string name="raza_animal">Raza:</string>
    <string name="tamano_animal">Tamaño:</string>
    <string name="pelaje_animal">Tipo de pelaje:</string>
    <string name="edad_animal">Edad:</string>
    <string name="chip_animal">Chip:</string>
    <string name="descripcion_animal">Descripción</string>
    <string name="datos_protectora">Datos de la protectora</string>
    <string name="provincia">Provincia:</string>
    <string name="codigo_postal">Código Postal:</string>
    <string name="direccion_protectora">Dirección:</string>
    <string name="contactar_con">Enviar mensaje a </string>
    <string name="mensaje_vacio">Mensaje vacío</string>
    <string name="f_animal">Animal:</string>
    <string name="f_perro">Perro</string>
    <string name="f_gato">Gato</string>
    <string name="f_todos">Todos</string>
    <string name="f_color">Color:</string>
    <string name="f_pelaje">Pelaje:</string>
    <string name="f_corto">Corto</string>
    <string name="f_largo">Largo</string>
    <string name="f_sexo">Sexo:</string>
    <string name="f_macho">Macho</string>
    <string name="f_hembra">Hembra</string>
    <string name="f_tamanio">Tamaño:</string>
    <string name="f_chip">Chip:</string>
    <string name="aplicar_filtros">Aplicar Filtros</string>
    <string name="f_si">Sí</string>
    <string name="f_no">No</string>
    <string name="tv_estado">Estado:</string>
    <string name="f_adopcion">Adopción</string>
    <string name="f_acogida">Acogida</string>
    <string name="f_provincia">Provincia:</string>
    <string name="f_comunidad">Comunidad:</string>
</resources>
