<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jblandii.protectora.CambiarEmail">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_32_layout"
        android:layout_marginStart="@dimen/margen_32_layout"
        android:layout_marginTop="125dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_email_actual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_actual"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_nueva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_32_layout"
        android:layout_marginStart="@dimen/margen_32_layout"
        android:layout_marginTop="@dimen/margen_16_layout"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email_actual"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_email_nueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_nuevo"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_nueva_repetir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_32_layout"
        android:layout_marginStart="@dimen/margen_32_layout"
        android:layout_marginTop="@dimen/margen_16_layout"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email_nueva"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_email_nueva_repetir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_confirmar"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_cambiar_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_32_layout"
        android:layout_marginStart="@dimen/margen_32_layout"
        android:layout_marginTop="@dimen/margen_32_layout"
        android:background="@color/colorPrimary"
        android:text="@string/cambiar_email"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email_nueva_repetir" />
</android.support.constraint.ConstraintLayout>
